--- a/07 Music Player/src/css/styles.css
+++ b/07 Music Player/src/css/styles.css
@@ -2,10 +2,10 @@
     /* colors */
     --primary-color: #dfdfe2;
     --secondary-color: #ffffff;
-    --app-background-color: #4d4d62;
-    --background-color: #1b1b32;
-    --foreground-color: #3b3b4f;
-    --highlight-color: #f1be32;
+    --app-background-color: #997950;
+    --background-color: #4B3A26;
+    --foreground-color: #795C32;
+    --highlight-color: white;
   
     /* font sizes */
     --root-font-size: 16px;
